# Gnuplot_Cmake

./: .gitignore  CMakeLists.txt  Plot.cpp  Plot.h  Readme.md  exemple.cpp  main.cpp
include/: Plot.h  roblib.h
robmoocpp/: 1.13_ex_schuler_imu.cpp  1.14_ex_lie_control.cpp  2.01_ex_crank.cpp  2.02_ex_pools.cpp  CMakeLists.txt
src/: Plot.cpp  roblib.cpp
